<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GameBox</string>
    <string name="title_favorite">Favorite</string>
    <string name="title">GameBox</string>
    <string name="option">Option</string>
    <string name="favorite">Favorite</string>
    <string name="game_image">Game Image</string>
    <string name="back">Back</string>
    <string name="open_website">Open Website</string>
    <string name="change_language">Change Language</string>
    <string name="loading">Loading</string>
    <string name="overview">Overview</string>
    <string name="share_game">%1$s \nopen at %2$s</string>
    <string name="success_add_favorite">%1$s Successfully added to Favorites</string>
    <string name="success_removed_favorite">%1$s Successfully removed from Favorites</string>
    <string name="search_here">Search Here</string>
    <string name="search">Search</string>
</resources>