<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/width_30"
            android:layout_height="@dimen/height_30"
            android:layout_marginVertical="@dimen/vertical_20"
            android:layout_marginStart="@dimen/horizontal_20"
            android:src="@drawable/ic_back_24"
            app:tint="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back" />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="@dimen/width_30"
            android:layout_height="@dimen/height_30"
            android:layout_marginVertical="@dimen/vertical_20"
            android:layout_marginEnd="@dimen/horizontal_20"
            android:src="@drawable/ic_share"
            app:tint="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_20"
                android:adjustViewBounds="true"
                android:transitionName="ivImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/game_image" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:visibility="invisible"
                android:id="@+id/fab_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/favorite"
                app:srcCompat="@drawable/ic_like"
                app:tint="#E91E63"
                android:layout_marginEnd="@dimen/end_20"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/iv_image"
                app:layout_constraintEnd_toEndOf="@+id/iv_image"
                app:layout_constraintTop_toBottomOf="@+id/iv_image" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_20"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppinsbold"
                android:layout_marginTop="@dimen/top_20"
                android:transitionName="tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_image"
                tools:text="@tools:sample/cities" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/tv_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_20"
                android:textSize="14sp"
                android:transitionName="tvRelease"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:text="@tools:sample/date/ddmmyy" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_20"
                android:layout_marginTop="@dimen/vertical_20"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/tv_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_20"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                tools:text="@tools:sample/lorem" />

            <Button
                android:visibility="invisible"
                android:id="@+id/btn_open_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_website"
                android:layout_marginHorizontal="@dimen/horizontal_20"
                android:layout_marginVertical="@dimen/vertical_20"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/loading_view"
        layout="@layout/view_loading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar" />

    <include
        android:id="@+id/error_view"
        android:visibility="gone"
        layout="@layout/view_error"
        android:layout_height="@dimen/height_0"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar"
        />
</androidx.constraintlayout.widget.ConstraintLayout>